Bug 33538 - bootstrap break in fortran on *-apple-darwin r128671
Summary: bootstrap break in fortran on *-apple-darwin r128671
Status: RESOLVED FIXED
Alias: None
Product: gcc
Classification: Unclassified
Component: fortran (show other bugs)
Version: 4.3.0
: P3 normal
Target Milestone: ---
Assignee: Not yet assigned to anyone
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2007-09-23 21:02 UTC by Andreas Tobler
Modified: 2007-09-24 20:26 UTC (History)
4 users (show)

See Also:
Host: *-apple-darwin
Target: *-apple-darwin
Build: *-apple-darwin
Known to work:
Known to fail:
Last reconfirmed:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Andreas Tobler 2007-09-23 21:02:06 UTC
svn r128671 causes a bootstrap failure on *apple-darwin:

(gdb) r
Starting program: /Volumes/development/gcc/head/objdir/gcc/f951 /Volumes/development/gcc/head/gcc/libgfortran/intrinsics/selected_int_kind.f90 -feliminate-unused-debug-symbols -fPIC -quiet -dumpbase selected_int_kind.f90 -mmacosx-version-min=10.4 -auxbase-strip .libs/selected_int_kind.o -g -O2 -Wall -version -fno-repack-arrays -fno-underscoring -fallow-leading-underscore -fno-common -I . -fintrinsic-modules-path finclude -o selected_int_kind.s
Reading symbols for shared libraries .++ done
GNU F95 (GCC) version 4.3.0 20070923 (experimental) [trunk revision 128695] (powerpc-apple-darwin8.10.0)
        compiled by GNU C version 4.3.0 20070923 (experimental) [trunk revision 128695], GMP version 4.2.2, MPFR version 2.3.0.
GGC heuristics: --param ggc-min-expand=100 --param ggc-min-heapsize=131072

Program received signal EXC_BAD_ACCESS, Could not access memory.
Reason: KERN_PROTECTION_FAILURE at address: 0x0000000c
0x00177360 in dbxout_end_source_file (line=4) at /Volumes/development/gcc/head/gcc/gcc/dbxout.c:1181
1181      if (current_file->bincl_status == BINCL_PROCESSED)
(gdb) bt
#0  0x00177360 in dbxout_end_source_file (line=4) at /Volumes/development/gcc/head/gcc/gcc/dbxout.c:1181
#1  0x00065b28 in gfc_advance_line () at /Volumes/development/gcc/head/gcc/gcc/fortran/scanner.c:322
#2  0x000675b8 in gfc_next_char_literal (in_string=4) at /Volumes/development/gcc/head/gcc/gcc/fortran/scanner.c:754
#3  0x000678d8 in gfc_next_char () at /Volumes/development/gcc/head/gcc/gcc/fortran/scanner.c:926
#4  0x000587f8 in gfc_match_literal_constant (result=0xbfffe900, signflag=0) at /Volumes/development/gcc/head/gcc/gcc/fortran/primary.c:785
#5  0x000449fc in match_mult_operand (result=0xbfffe968) at /Volumes/development/gcc/head/gcc/gcc/fortran/matchexp.c:161
#6  0x00044cf8 in match_add_operand (result=0xbfffe9e8) at /Volumes/development/gcc/head/gcc/gcc/fortran/matchexp.c:382
#7  0x00044f84 in match_level_2 (result=0xbfffea68) at /Volumes/development/gcc/head/gcc/gcc/fortran/matchexp.c:501
#8  0x000450f8 in match_level_3 (result=0xbfffead8) at /Volumes/development/gcc/head/gcc/gcc/fortran/matchexp.c:572
#9  0x00045240 in match_and_operand (result=0xbfffeb58) at /Volumes/development/gcc/head/gcc/gcc/fortran/matchexp.c:620
#10 0x000454ac in match_or_operand (result=0xbfffebc8) at /Volumes/development/gcc/head/gcc/gcc/fortran/matchexp.c:743
#11 0x000455d0 in match_equiv_operand (result=0xbfffec38) at /Volumes/development/gcc/head/gcc/gcc/fortran/matchexp.c:786
#12 0x000456f4 in match_level_5 (result=0xbfffeca8) at /Volumes/development/gcc/head/gcc/gcc/fortran/matchexp.c:832
#13 0x0004489c in gfc_match_expr (result=0x42510c24) at /Volumes/development/gcc/head/gcc/gcc/fortran/matchexp.c:891
#14 0x00008ef8 in gfc_match_array_spec (asp=0xbfffedb4) at /Volumes/development/gcc/head/gcc/gcc/fortran/array.c:297
#15 0x0001a078 in gfc_match_data_decl () at /Volumes/development/gcc/head/gcc/gcc/fortran/decl.c:1456
#16 0x0004fee0 in match_word (str=0x4 <Address 0x4 out of bounds>, subr=0x19e18 <gfc_match_data_decl>, old_locus=0xbfffef0c) at /Volumes/development/gcc/head/gcc/gcc/fortran/parse.c:64
#17 0x000505e8 in decode_statement () at /Volumes/development/gcc/head/gcc/gcc/fortran/parse.c:133
#18 0x000512f4 in next_statement () at /Volumes/development/gcc/head/gcc/gcc/fortran/parse.c:505
#19 0x0005319c in parse_spec (st=ST_DATA_DECL) at /Volumes/development/gcc/head/gcc/gcc/fortran/parse.c:1958
#20 0x00054d18 in parse_progunit (st=ST_BLOCK_DATA) at /Volumes/development/gcc/head/gcc/gcc/fortran/parse.c:2965
#21 0x000552b4 in gfc_parse_file () at /Volumes/development/gcc/head/gcc/gcc/fortran/parse.c:3285
#22 0x0007f684 in gfc_be_parse_file (set_yydebug=4) at /Volumes/development/gcc/head/gcc/gcc/fortran/f95-lang.c:258
#23 0x000df3a8 in toplev_main (argc=6665944, argv=0x406c6380) at /Volumes/development/gcc/head/gcc/gcc/toplev.c:1045
#24 0x00002430 in _start ()
#25 0x00002134 in start ()

Darwin is an arch which uses stabs, at least for Tiger and below. Aka, 10.8 and lower.
Comment 1 Tobias Burnus 2007-09-24 13:45:48 UTC
See PR33502 and http://gcc.gnu.org/ml/gcc-patches/2007-09/msg01721.html for the patch which causes the regression.
See also http://gcc.gnu.org/ml/fortran/2007-09/msg00394.html
Comment 2 Francois-Xavier Coudert 2007-09-24 20:24:25 UTC
Subject: Bug 33538

Author: fxcoudert
Date: Mon Sep 24 20:24:11 2007
New Revision: 128724

URL: http://gcc.gnu.org/viewcvs?root=gcc&view=rev&rev=128724
Log:
	PR fortran/33538
	* scanner.c, parse.c, gfortran.h: Revert revision 128671.

Modified:
    trunk/gcc/fortran/ChangeLog
    trunk/gcc/fortran/gfortran.h
    trunk/gcc/fortran/parse.c
    trunk/gcc/fortran/scanner.c

Comment 3 Francois-Xavier Coudert 2007-09-24 20:26:32 UTC
Patch reverted, trunk should be back on track. Sorry.