	PR fortran/33538 	* scanner.c, parse.c, gfortran.h: Revert revision 128671.

git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@128724 138bc75d-0d04-0410-961f-82ee72b054a4